# flocoin

./: .appveyor.yml  .cirrus.yml  .gitignore  .gitmodules  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libbitcoinconsensus.pc  libflocoinconsensus.pc.in
doc/man/: Makefile.am  flocoin-cli.1  flocoin-qt.1  flocoin-tx.1  flocoin-util.1  flocoin-wallet.1  flocoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  bitcoin-cli.cpp  bitcoin-tx.cpp  blockencodings.h  blockfilter.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  (+88 more)
src/bench/: .gitignore  bech32.cpp  bench.h  ccoins_caching.cpp  coin_selection.cpp  data.h  verify_script.cpp
src/bench/data/: block413567.raw
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/consensus/: consensus.h  merkle.h  params.h  tx_check.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  chacha_poly_aead.h  common.h  e_os2.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  muhash.h  opensslconf.h  poly1305.h  ripemd160.h  scrypt  scrypt-sse2  scrypt-sse2.cpp  scrypt.cpp  scrypt.h  sha.h  sha1.h  sha256.cpp  sha256.h  sha3.h  sha512.h  siphash.h
src/crypto/ctaes/: README.md
src/index/: base.h  blockfilterindex.h  coinstatsindex.h  disktxpos.h  txindex.h
src/init/: common.cpp  common.h  flocoin-node.cpp  flocoind.cpp
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  process.h  protocol.h
src/ipc/capnp/: context.h  init-types.h  protocol.h
src/leveldb/util/: env_posix.cc
src/logging/: timer.h
src/node/: blockstorage.cpp  blockstorage.h  coin.h  coinstats.h  context.h  interfaces.cpp  psbt.h  transaction.h  ui_interface.h  utxo_snapshot.h
src/policy/: feerate.h  fees.cpp  fees.h  packages.h  policy.cpp  policy.h  rbf.h  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoinamountfield.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  flocoin.cpp  flocoin.h  flocoin.qrc  flocoin_locale.qrc  flocoinaddressvalidator.cpp  flocoinaddressvalidator.h  flocoinamountfield.cpp  flocoinamountfield.h  flocoingui.cpp  flocoingui.h  flocoinstrings.cpp  flocoinunits.cpp  flocoinunits.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.h  intro.cpp  intro.h  macdockiconhandler.h  (+67 more)
src/qt/android/: AndroidManifest.xml
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: flocoin_af.ts  flocoin_am.ts  flocoin_ar.ts  flocoin_be.ts  (+83 more)
src/rpc/: blockchain.cpp  blockchain.h  client.h  external_signer.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  net.h  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.h  util.cpp  util.h
src/script/: descriptor.cpp  descriptor.h  flocoinconsensus.cpp  flocoinconsensus.h  interpreter.cpp  interpreter.h  keyorigin.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: .cirrus.yml  .gitignore  Makefile.am  README.md  SECURITY.md  configure.ac  libsecp256k1.pc.in
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: README.md  amount_tests.cpp  compress_tests.cpp  crypto_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_tests.cpp  main.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  pow_tests.cpp  rpc_tests.cpp  script_p2sh_tests.cpp  script_standard_tests.cpp  script_tests.cpp  scriptnum10.h  settings_tests.cpp  sighash_tests.cpp  system_tests.cpp  transaction_tests.cpp  util_tests.cpp  util_threadnames_tests.cpp  validation_chainstatemanager_tests.cpp  validation_tests.cpp  validationinterface_tests.cpp  versionbits_tests.cpp
src/univalue/: README.md
src/util/: asmap.h  bip32.h  bytevectorhash.h  check.h  epochguard.h  error.h  fees.h  getuniquepath.h  golombrice.h  hash_type.h  hasher.h  macros.h  message.cpp  message.h  moneystr.h  rbf.h  readwritefile.h  serfloat.h  settings.h  sock.h  spanparsing.h  strencodings.h  string.h  system.cpp  system.h  thread.h  threadnames.cpp  threadnames.h  time.cpp  time.h  tokenpipe.cpp  tokenpipe.h  trace.h  translation.h  ui_change_type.h  url.h  vector.h
src/wallet/: bdb.cpp  bdb.h  coincontrol.h  coinselection.h  context.h  crypter.h  db.cpp  db.h  dump.cpp  dump.h  external_signer_scriptpubkeyman.cpp  external_signer_scriptpubkeyman.h  feebumper.cpp  feebumper.h  fees.h  interfaces.cpp  ismine.h  load.h  receive.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  salvage.h  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  spend.h  sqlite.cpp  sqlite.h  transaction.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  wallettool.h  walletutil.h
src/zmq/: zmqabstractnotifier.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h  zmqutil.h
(+550 files in other folders)
