dist_man1_MANS=

if BUILD_FLOCOIND
  dist_man1_MANS+=flocoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=flocoin-qt.1
endif

if BUILD_FLOCOIN_CLI
  dist_man1_MANS+=flocoin-cli.1
endif

if BUILD_FLOCOIN_TX
  dist_man1_MANS+=flocoin-tx.1
endif

if BUILD_FLOCOIN_UTIL
  dist_man1_MANS+=flocoin-util.1
endif

if ENABLE_WALLET
if BUILD_FLOCOIN_WALLET
  dist_man1_MANS+=flocoin-wallet.1
endif
endif
